--- a/index.html
+++ b/index.html
@@ -4,43 +4,39 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="main.js">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <link href="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
-
   </head>
 
   <body>
     <div class="calculator">
       <p id="title">My Calculator</p><br>
-      <input type="text" disabled="disabled" id="answer"/>
+      <input type="text" display="displaynum" id="answer"/>
       <div class="row">
-        <button class="ctrl">AC</button>
-        <button class="ctrl">CE</button>
-        <button>%</button>
-        <button>/</button>
+        <input type="button" onclick="CE()" value="CE" class="long"/>
+        <input type="button" onclick="AC()" value="AC" class="long"/>
       </div>
       <div class="row">
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>x</button>
+        <input type="button" onclick="7" value="7"/>
+        <input type="button" onclick="8" value="8"/>
+        <input type="button" onclick="9" value="9"/>
+        <input type="button" onclick="div()" value="/"/>
       </div>
       <div class="row">
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>-</button>
+        <input type="button" onclick="4" value="4"/>
+        <input type="button" onclick="5" value="5"/>
+        <input type="button" onclick="6" value="6"/>
+        <input type="button" onclick="mult()" value="x"/>
       </div>
       <div class="row">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>+</button>
+        <input type="button" onclick="1" value="1"/>
+        <input type="button" onclick="2" value="2"/>
+        <input type="button" onclick="3" value="3"/>
+        <input type="button" onclick="sum()" value="+"/>
       </div>
       <div class="row">
-        <button class="long">0</button>
-        <button>.</button>
-        <button>=</button>
+        <input type="button" onclick="0" value="0" />
+        <input type="button" onclick="." value="."/>
+        <input type="button" onclick="equals()" value="="/>
+        <input type="button" onclick="rest()" value="-"/>
       </div>
     </div>
 
